--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
   },
   "homepage": "https://github.com/ascendtradingdevelopment/ascend-node-api#readme",
   "dependencies": {
-    "accesscontrol": "^1.5.2",
-    "bcryptjs": "*",
     "body-parser": "*",
     "connect-mongo": "*",
     "cookie-parser": "*",
@@ -27,6 +25,6 @@
     "mongodb": "*",
     "mongoose": "*",
     "passport": "*",
-    "passport-local": "*"
+    "passport-github2": "*"
   }
 }
